Fixed scale on mobile.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>SWRPG Helper</title>
 <link href="https://fonts.googleapis.com/css?family=Russo+One" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <script>
 var abilitySides = ['s','a','sa','ss','a','s','a',''];
 var proficiencySides = ['aa','a','aa','sx','s','sa','s','sa','ss','sa','ss',''];
