Tweaking style some more.

--- a/index.html
+++ b/index.html
@@ -61,10 +61,11 @@ body {
 }
 #dice-form input[type='number'] {
 	border: none;
-	padding: 1em 0.3em;
 	text-align: center;
 	color: white;
 	margin: 0.3em;
+	height: 5vw;
+    width: 5vw;
 }
 input:focus,
 button:focus {
