Further messing with style.

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@ body {
 	text-align: center;
 	color: white;
 	margin: 0.3em;
-	height: 5vw;
-    width: 5vw;
+	height: 5em;
+    width: 5em;
 }
 input:focus,
 button:focus {
