--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@ body {
 	text-align: center;
 	color: white;
 	margin: 0.3em;
-	height: 5em;
-    width: 5em;
+	height: 3em;
+    width: 3em;
+    font-size: 16px;
 }
 input:focus,
 button:focus {
